--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: index
-title: place_your_blog_title_here
+title: Hi! 
 ---
 
 <article id="post__content">
-  <h1 id="post__title">Welcome</h1>
+  <h1 id="post__title">Love and peace</h1>
 </article> <!-- end #post__content -->
